--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,78 @@
+# Visual Studio files
+.vscode/
+.vs/
+*.suo
+*.user
+*.sln.docstates
+
+# Rider files
+.idea/
+*.sln.iml
+riderModule.iml
+
+# User-specific files
+*.suo
+*.user
+*.suo
+*.user
+*.userprefs
+
+# Compiled output
 bin/
 obj/
-/packages/
-riderModule.iml
+
+# NuGet Packages
+packages/
+
+# Visual Studio Installer files
+Installer/
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# VS Code directories
+.vscode/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# SQLite database files
+*.sqlite
+
+# .NET Core
+project.lock.json
+project.fragment.lock.json
+artifacts/
+
+# Tye
+.tye/
+
+# User-specific files
+*.suo
+*.user
+*.suo
+*.user
+*.suo
+*.userprefs
+
+# Sass files
+.sass-cache/
+*.css.map
+*.sass.map
+*.scss.map
+
+# Caches
 /_ReSharper.Caches/
