build(Auction.API.csproj):adds nuget packages entity framework and sqlite

--- a/src/Auction.API/Auction.API.csproj
+++ b/src/Auction.API/Auction.API.csproj
@@ -9,7 +9,25 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Entity\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="Entity\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Remove="Entity\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Entity\**" />
     </ItemGroup>
 
 </Project>
