chore(Auction.API.csproj):changes in the file when created Communication folder

--- a/src/Auction.API/Auction.API.csproj
+++ b/src/Auction.API/Auction.API.csproj
@@ -30,4 +30,8 @@
       <None Remove="Entity\**" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Communication\Responses\" />
+    </ItemGroup>
+
 </Project>
